RESOLVED FIXED57793
Fixed a weak-handle-related leak in RegisterFile
https://bugs.webkit.org/show_bug.cgi?id=57793
Summary Fixed a weak-handle-related leak in RegisterFile
Geoffrey Garen
Reported 2011-04-04 14:53:19 PDT
Fixed a weak-handle-related leak in RegisterFile
Attachments
Patch (4.61 KB, patch)
2011-04-04 14:55 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-04-04 14:55:46 PDT
Geoffrey Garen
Comment 2 2011-04-04 15:02:50 PDT
WebKit Review Bot
Comment 3 2011-04-04 15:29:53 PDT
http://trac.webkit.org/changeset/82877 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.